[gd_scene load_steps=4 format=2]

[ext_resource path="res://cash_register/cash_register.gd" type="Script" id=1]
[ext_resource path="res://cash_register/cash_register_ani.tres" type="SpriteFrames" id=2]
[ext_resource path="res://UI/ProgressBar/ProgressBar.tscn" type="PackedScene" id=3]

[node name="cash_register" type="Position2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 13.4693, -49.8883, -8.03978, -64.2277, -14.4548, -61.5862, -23.1339, -65.3598, -12.1907, -71.7748, 0.261978, -67.6239, 2.52609, -78.1898, -7.28508, -89.5103, 12.3373, -78.9445, 20.639, -68.7559, 21.3937, -52.1524 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -70 )
frames = ExtResource( 2 )
animation = "cash"

[node name="ProgressBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -21.8865
margin_top = -107.923
margin_right = 28.1135
margin_bottom = -93.9229

[connection signal="click_on_cash" from="." to="." method="_on_cash_register_click_on_cash"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="animation_finished" from="animatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="bar_filled" from="ProgressBar" to="." method="_on_ProgressBar_bar_filled"]
